a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yu_hua/d.min
var x: string;
var y: string;

x = "haha";
y = "haha";

if x - y then
    y = x;
endif


